<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingStart="@dimen/activity_horizontal_margin_altered"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_vertical"
    android:background="@color/white"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="20sp"
        android:gravity="end"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu_greeting_body"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_gravity="end"
        android:gravity="end"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20sp">
        <Button
            android:id="@+id/main_startTest"
            android:visibility="gone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_start"
            android:paddingStart="30sp"
            android:paddingEnd="10sp"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:layout_marginBottom="15sp"
            android:onClick="gotoTest"
            android:background="@drawable/button_background"
            android:layout_gravity="start"
            android:gravity="end"
            android:elevation="5dp"/>

        <Button
            android:id="@+id/main_startSingleTest"
            android:visibility="gone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/button_singlestart"
            android:paddingStart="30sp"
            android:paddingEnd="10sp"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:layout_marginBottom="15sp"
            android:onClick="gotoSingleTest"
            android:background="@drawable/button_background"
            android:layout_gravity="start"
            android:gravity="end"
            android:elevation="5dp"/>

        <Button
            android:id="@+id/main_results"
            android:visibility="gone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/title_activity_test_lookup"
            android:paddingStart="30sp"
            android:paddingEnd="10sp"
            android:paddingTop="20sp"
            android:paddingBottom="20sp"
            android:layout_marginBottom="15sp"
            android:onClick="gotoExport"
            android:background="@drawable/button_background"
            android:layout_gravity="start"
            android:gravity="end"
            android:elevation="5dp"/>

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginBottom="15sp"
                android:background="@drawable/button_background"
                android:elevation="5dp"
                android:gravity="end"
                android:onClick="gotoPreCalibration"
                android:paddingStart="30sp"
                android:paddingTop="20sp"
                android:paddingEnd="10sp"
                android:paddingBottom="20sp"
                android:text="@string/title_calibration" />

            <Button
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_background"
                android:elevation="5dp"
                android:gravity="end"
                android:onClick="gotoInfo"
                android:paddingStart="20sp"
                android:paddingTop="20sp"
                android:paddingEnd="10sp"
                android:paddingBottom="20sp"
                android:text="@string/title_activity_info" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>